--- a/run-container/01-run-test-packages.Rmd
+++ b/run-container/01-run-test-packages.Rmd
@@ -121,6 +121,7 @@ suppressPackageStartupMessages({
   # Motif analysis with Signac
   library(JASPAR2018)
   library(JASPAR2020)
+  library(JASPAR2022)
   library(JASPAR2024)
   library(TFBSTools)
   library(BSgenome.Mmusculus.UCSC.mm10)
