Add load signac ins cript2

--- a/run-container/02-run-lsf-problematic-packages.Rmd
+++ b/run-container/02-run-lsf-problematic-packages.Rmd
@@ -129,6 +129,7 @@ suppressPackageStartupMessages({
   
   ####################################################
   # sc-epigenie
+  library(Signac)
   library(AnnotationHub)
   library(ensembldb)
   library(GenomeInfoDb) #translation between chromosome names
