--- a/analyses/motif-footprint-analysis/02-motif-footprinting-analysis.Rmd
+++ b/analyses/motif-footprint-analysis/02-motif-footprinting-analysis.Rmd
@@ -158,7 +158,10 @@ suppressPackageStartupMessages({
   library(Seurat)
   library(patchwork)
   library(tidyverse)
+  library(JASPAR2018)
   library(JASPAR2020)
+  library(JASPAR2022)
+  library(JASPAR2024)
   library(TFBSTools)
   library(knitr)
   library(motifmatchr)
